# pgui

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
components/scences/: __init__.py  manager_scence.py  scence.py
components/scenes/: __init__.py  manager_scene.py  scene.py
components/ui/: __init__.py  alert.py  background.py  button.py  checkbox.py  dropdown.py  grid.py  image.py  input.py  label.py  panel.py  radio.py  scrollbar.py  slider.py  switch.py  tabs.py  textbox.py
config/: _screen.json
entities/: model.py
models/: __init__.py  model.py
models/animation/: __init__.py  animation.py
models/physics_body/: __init__.py  character_body.py  rigid_body.py  static_body.py
pgui/: __init__.py
pgui/components/scenes/: __init__.py  manager_scene.py  scene.py
pgui/components/ui/: __init__.py  alert.py  background.py  button.py  checkbox.py  dialog.py  dropdown.py  grid.py  image.py  input.py  label.py  panel.py  radio.py  scrollbar.py  slider.py  switch.py  tabs.py  textbox.py
pgui/config/: _screen.json
pgui/models/animation/: __init__.py  animation.py
pgui/models/physics_body/: __init__.py  rigid_body.py  (+2 more)
pgui/systems/: config.py  dialog.py  draw_system.py
pgui/utils/: __init__.py  utils_transform.py
pgui_module/: __init__.py
pgui_module/config/: _screen.json
pgui_module/entities/: model.py
pgui_module/systems/: config.py  draw_system.py
pgui_module/tests/: tests_components_scence.py  tests_components_ui.py  tests_systems.py
systems/: config.py  dialog.py  draw_system.py
utils/: utils_transform.py  utils_typing.py
(+16 files in other folders)
