[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pgui"
version = "0.1.0"

description = "A lightweight pygame ui framework"
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
    "pygame==2.6.1",
    "numpy==2.4.6"
]

authors = [
    { name = "MeoMuop3727" }
]

license = { text = "MIT" }

keywords = [
    "pygame",
    "ui",
    "game",
    "framework"
]